--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,15 @@ public_html/hot
 
 storage/*.key
 .env
+.env.backup
 Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+# Docker
+.docker/
+
+/public/js
+/public/css
+/public/image
