--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ public/hot
 public/build
 public/mix-manifest.json
 package-lock.json
+public/*.js
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
