--- a/package.json
+++ b/package.json
@@ -11,10 +11,28 @@
         "eslint": "eslint 'resources/js/**/*.{js,vue}'",
         "eslint:fix": "eslint 'resources/js/**/*.{js,vue}' --fix"
     },
+    "dependencies": {
+        "eslint-config-standard": "^14.1.0",
+        "eslint-plugin-import": "^2.20.0",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1",
+        "js-cookie": "^2.2.0",
+        "sweetalert2": "^8.10.0",
+        "vform": "^1.0.0",
+        "vue": "^2.6.10",
+        "vue-i18n": "^8.11.2",
+        "vue-meta": "^1.6.0",
+        "vue-router": "^3.0.6",
+        "vuex": "^3.1.0",
+        "vuex-router-sync": "^5.0.0"
+    },
     "devDependencies": {
         "axios": "^0.19",
+        "babel-eslint": "^10.0.1",
         "cross-env": "^5.1",
         "eslint": "^6.8.0",
+        "eslint-plugin-vue": "^6.1.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
