--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "eslint-plugin-node": "^11.0.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "js-cookie": "^2.2.0",
+        "js-cookie": "^2.2.1",
         "sweetalert2": "^8.10.0",
         "vform": "^1.0.0",
         "vue": "^2.6.10",
@@ -27,7 +27,8 @@
         "vue-router": "^3.0.6",
         "vuetify": "^2.2.4",
         "vuetify-loader": "^1.4.3",
-        "vuex": "^3.1.0",
+        "vuex": "^3.1.2",
+        "vuex-persistedstate": "^2.7.0",
         "vuex-router-sync": "^5.0.0"
     },
     "devDependencies": {
