--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
         "sweetalert2": "^8.10.0",
         "vform": "^1.0.0",
         "vue": "^2.6.10",
+        "vue-axios": "^2.1.5",
         "vue-i18n": "^8.11.2",
         "vue-meta": "^1.6.0",
         "vue-page-transition": "^0.2.2",
         "vue-router": "^3.0.6",
+        "vue-social-auth": "^1.4.3",
         "vuetify": "^2.2.4",
         "vuetify-loader": "^1.4.3",
         "vuex": "^3.1.2",
