hotfix: remove library unused

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GOOGLE_ID=
 GOOGLE_SECRET=
 GOOGLE_URL=http://localhost:2021/auth/google/callback
+MIX_GOOGLE_URL=http://localhost:2021/auth/google/callback
