Test Self Runner Hosted

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,9 @@ workflows:
   version: 2
   notify_deploy:
     jobs:
-      - build
+      - build:
+          branches:
+            only: develop
       - deploy:
           requires:
             - build
