Change Provider Deploy CircleCI To GithubActions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,10 +82,13 @@ workflows:
   version: 2
   notify_deploy:
     jobs:
-      - build
+      - build:
+            filters:
+                branches:
+                    only: master
       - deploy:
           requires:
             - build
           filters:
             branches:
-              only: develop
+              only: master
