Test use private key on server

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "$FINGER_KEY"
+            - "$DEPLOY_KEY"
       - run:
           name: Install Deployer
           command: |
