--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": "^7.2",
         "arcanedev/log-viewer": "^5.2",
+        "bacon/bacon-qr-code": "1.0.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/passport": "^8.2",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
+        "pragmarx/google2fa-laravel": "^1.3",
         "sentry/sentry-laravel": "1.5.0"
     },
     "require-dev": {
