--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
         "pragmarx/google2fa-laravel": "^1.3",
+        "pragmarx/google2fa-qrcode": "^1.0",
         "sentry/sentry-laravel": "1.5.0"
     },
     "require-dev": {
