Monitoring application to chatwork message

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,6 @@ GOOGLE_ID=
 GOOGLE_SECRET=
 GOOGLE_URL=http://localhost:2021/auth/google/callback
 MIX_GOOGLE_URL=http://localhost:2021/auth/google/callback
+
+CHATWORK_API_KEY=
+CHATWORK_API_ROOM_ID=
