--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.0",
         "pragmarx/google2fa-laravel": "^1.3",
         "pragmarx/google2fa-qrcode": "^1.0",
-        "sentry/sentry-laravel": "1.5.0"
+        "sentry/sentry-laravel": "1.5.0",
+        "wataridori/chatwork-sdk": "^0.3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
